--- a/docs/model_prediction.ipynb
+++ b/docs/model_prediction.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "['2016_TOYOTA_Camry_4cyl_2WD', '2016_TESLA_Model_S60_2WD']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,15 +48,55 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" style=\"border-collapse: collapse;\"><tr><th colspan=\"2\" style=\"border-bottom: 2px solid black; text-align: center;\">Model Summary</th></tr><tr><td>Vehicle description</td><td>2016 Toyota Camry 4cyl 2WD</td></tr><tr><td>Powertrain type</td><td>ICE</td></tr><tr><td>Number of estimators</td><td>2</td></tr><tr><th colspan=\"2\" style=\"border-bottom: 2px solid black; text-align: center;\">Estimator Summary</th></tr><tr><td>Feature</td><td>speed (mph)</td></tr><tr><td>Feature</td><td>grade (decimal_-1_to_1)</td></tr><tr><td>Distance</td><td>distance (miles)</td></tr><tr><td>Target</td><td>energy (gallons_gasoline)</td></tr><tr><td>Predicted Consumption</td><td>31.581 (miles/gallons_gasoline)</td></tr><tr><th colspan=\"2\" style=\"border-bottom: 2px solid black; text-align: center;\">Estimator Summary</th></tr><tr><td>Feature</td><td>speed (mph)</td></tr><tr><td>Feature</td><td>grade (decimal_-1_to_1)</td></tr><tr><td>Feature</td><td>entry_angle (degrees)</td></tr><tr><td>Feature</td><td>exit_angle (degrees)</td></tr><tr><td>Distance</td><td>distance (miles)</td></tr><tr><td>Target</td><td>energy (gallons_gasoline)</td></tr><tr><td>Predicted Consumption</td><td>31.455 (miles/gallons_gasoline)</td></tr></table>"
+      ],
+      "text/plain": [
+       "========================================\n",
+       "Model Summary\n",
+       "--------------------\n",
+       "Vehicle description: 2016 Toyota Camry 4cyl 2WD\n",
+       "Powertrain type: ICE\n",
+       "Number of estimators: 2\n",
+       "========================================\n",
+       "Estimator Summary\n",
+       "--------------------\n",
+       "Feature: speed (mph)\n",
+       "Feature: grade (decimal_-1_to_1)\n",
+       "Distance: distance (miles)\n",
+       "Target: energy (gallons_gasoline)\n",
+       "Predicted Consumption: 31.581 (miles/gallons_gasoline)\n",
+       "========================================\n",
+       "Estimator Summary\n",
+       "--------------------\n",
+       "Feature: speed (mph)\n",
+       "Feature: grade (decimal_-1_to_1)\n",
+       "Feature: entry_angle (degrees)\n",
+       "Feature: exit_angle (degrees)\n",
+       "Distance: distance (miles)\n",
+       "Target: energy (gallons_gasoline)\n",
+       "Predicted Consumption: 31.455 (miles/gallons_gasoline)\n",
+       "========================================"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "> TODO: add camry.summary() when that gets implemented"
+    "camry"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,12 +114,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pretrained Camry model has multiple estimators available for you to use depending on what features you might have available. You can list which feature sets are available:"
+    "The pretrained Camry model has multiple estimators available for you to use depending on what features you might have available. You can see a summary of all the estimators in the model summary shown above but you can also just list which feature sets are available:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +128,7 @@
        "dict_keys(['grade&speed', 'entry_angle&exit_angle&grade&speed'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +207,7 @@
        "4  0.033694"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +286,7 @@
        "4  0.033961"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +369,7 @@
        "4  0.039287"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,6 +383,62 @@
    "metadata": {},
    "source": [
     "Note that we see higher energy values when apply these factors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lastly, we can take a look at the validation errors for each estimator that the model has."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table border=\"1\" style=\"border-collapse: collapse;\"><tr><td colspan='2' style='border-bottom: 2px solid black; text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade&speed</td></tr><tr><td>Target</td><td>energy</td></tr><tr><td>Link RMSE</td><td>0.00160</td></tr><tr><td>Link Norm RMSE</td><td>0.93762</td></tr><tr><td>Link Weighted RPD</td><td>0.39819</td></tr><tr><td>Net Error</td><td>0.00224</td></tr><tr><td>Actual Dist/Energy</td><td>31.65167</td></tr><tr><td>Predicted Dist/Energy</td><td>31.58107</td></tr><tr><td>Trip RPD</td><td>0.19973</td></tr><tr><td>Trip Weighted RPD</td><td>0.12012</td></tr><tr><td>Trip RMSE</td><td>0.01196</td></tr><tr><td>Trip Norm RMSE</td><td>0.22962</td></tr><table border=\"1\" style=\"border-collapse: collapse;\"><tr><td colspan='2' style='border-bottom: 2px solid black; text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>entry_angle&exit_angle&grade&speed</td></tr><tr><td>Target</td><td>energy</td></tr><tr><td>Link RMSE</td><td>0.00160</td></tr><tr><td>Link Norm RMSE</td><td>0.93498</td></tr><tr><td>Link Weighted RPD</td><td>0.39450</td></tr><tr><td>Net Error</td><td>0.00624</td></tr><tr><td>Actual Dist/Energy</td><td>31.65167</td></tr><tr><td>Predicted Dist/Energy</td><td>31.45542</td></tr><tr><td>Trip RPD</td><td>0.19806</td></tr><tr><td>Trip Weighted RPD</td><td>0.11962</td></tr><tr><td>Trip RMSE</td><td>0.01187</td></tr><tr><td>Trip Norm RMSE</td><td>0.22795</td></tr>"
+      ],
+      "text/plain": [
+       "=========================================\n",
+       "Feature Set ID:       grade&speed\n",
+       "Target:               energy\n",
+       "Link RMSE             0.002\n",
+       "Link Norm RMSE        0.938\n",
+       "Link Weighted RPD     0.398\n",
+       "Net Error             0.002\n",
+       "Actual Dist/Energy    31.652\n",
+       "Predicted Dist/Energy 31.581\n",
+       "Trip RPD              0.200\n",
+       "Trip Weighted RPD     0.120\n",
+       "Trip RMSE             0.012\n",
+       "Trip Norm RMSE        0.230\n",
+       "=========================================\n",
+       "Feature Set ID:       entry_angle&exit_angle&grade&speed\n",
+       "Target:               energy\n",
+       "Link RMSE             0.002\n",
+       "Link Norm RMSE        0.935\n",
+       "Link Weighted RPD     0.394\n",
+       "Net Error             0.006\n",
+       "Actual Dist/Energy    31.652\n",
+       "Predicted Dist/Energy 31.455\n",
+       "Trip RPD              0.198\n",
+       "Trip Weighted RPD     0.120\n",
+       "Trip RMSE             0.012\n",
+       "Trip Norm RMSE        0.228\n",
+       "========================================="
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "camry.errors"
    ]
   },
   {
