--- a/docs/model_prediction.ipynb
+++ b/docs/model_prediction.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
        "['2016_TOYOTA_Camry_4cyl_2WD', '2016_TESLA_Model_S60_2WD']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "========================================"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "dict_keys(['grade&speed', 'entry_angle&exit_angle&grade&speed'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "4  0.033694"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        "4  0.033961"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "4  0.039287"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,13 +394,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table border=\"1\" style=\"border-collapse: collapse;\"><tr><td colspan='2' style='border-bottom: 2px solid black; text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade&speed</td></tr><tr><td>Target</td><td>energy</td></tr><tr><td>Link RMSE</td><td>0.00160</td></tr><tr><td>Link Norm RMSE</td><td>0.93762</td></tr><tr><td>Link Weighted RPD</td><td>0.39819</td></tr><tr><td>Net Error</td><td>0.00224</td></tr><tr><td>Actual Dist/Energy</td><td>31.65167</td></tr><tr><td>Predicted Dist/Energy</td><td>31.58107</td></tr><tr><td>Trip RPD</td><td>0.19973</td></tr><tr><td>Trip Weighted RPD</td><td>0.12012</td></tr><tr><td>Trip RMSE</td><td>0.01196</td></tr><tr><td>Trip Norm RMSE</td><td>0.22962</td></tr><table border=\"1\" style=\"border-collapse: collapse;\"><tr><td colspan='2' style='border-bottom: 2px solid black; text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>entry_angle&exit_angle&grade&speed</td></tr><tr><td>Target</td><td>energy</td></tr><tr><td>Link RMSE</td><td>0.00160</td></tr><tr><td>Link Norm RMSE</td><td>0.93498</td></tr><tr><td>Link Weighted RPD</td><td>0.39450</td></tr><tr><td>Net Error</td><td>0.00624</td></tr><tr><td>Actual Dist/Energy</td><td>31.65167</td></tr><tr><td>Predicted Dist/Energy</td><td>31.45542</td></tr><tr><td>Trip RPD</td><td>0.19806</td></tr><tr><td>Trip Weighted RPD</td><td>0.11962</td></tr><tr><td>Trip RMSE</td><td>0.01187</td></tr><tr><td>Trip Norm RMSE</td><td>0.22795</td></tr>"
+       "<table border=\"1\" style=\"border-collapse: collapse;\"><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade&speed</td></tr><tr><td>Target</td><td>energy</td></tr><tr><td>Link RMSE</td><td>0.00160</td></tr><tr><td>Link Norm RMSE</td><td>0.93762</td></tr><tr><td>Link Weighted RPD</td><td>0.39819</td></tr><tr><td>Net Error</td><td>0.00224</td></tr><tr><td>Actual Dist/Energy</td><td>31.65167</td></tr><tr><td>Predicted Dist/Energy</td><td>31.58107</td></tr><tr><td>Trip RPD</td><td>0.19973</td></tr><tr><td>Trip Weighted RPD</td><td>0.12012</td></tr><tr><td>Trip RMSE</td><td>0.01196</td></tr><tr><td>Trip Norm RMSE</td><td>0.22962</td></tr><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>entry_angle&exit_angle&grade&speed</td></tr><tr><td>Target</td><td>energy</td></tr><tr><td>Link RMSE</td><td>0.00160</td></tr><tr><td>Link Norm RMSE</td><td>0.93498</td></tr><tr><td>Link Weighted RPD</td><td>0.39450</td></tr><tr><td>Net Error</td><td>0.00624</td></tr><tr><td>Actual Dist/Energy</td><td>31.65167</td></tr><tr><td>Predicted Dist/Energy</td><td>31.45542</td></tr><tr><td>Trip RPD</td><td>0.19806</td></tr><tr><td>Trip Weighted RPD</td><td>0.11962</td></tr><tr><td>Trip RMSE</td><td>0.01187</td></tr><tr><td>Trip Norm RMSE</td><td>0.22795</td></tr></table>"
       ],
       "text/plain": [
        "=========================================\n",
@@ -432,7 +432,7 @@
        "========================================="
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
