add back visualize feature test

--- a/docs/model_training.ipynb
+++ b/docs/model_training.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-18 16:14:08,206 [INFO] - filtered out 0 rows with energy rates outside of the limits of -inf and inf for energy target gallons_fastsim\n"
+      "2023-09-19 15:55:20,870 [INFO] - filtered out 0 rows with energy rates outside of the limits of -inf and inf for energy target gallons_fastsim\n"
      ]
     }
    ],
@@ -294,51 +294,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<table border=\"1\" style=\"border-collapse: collapse;\"><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>speed</td></tr><tr><td>Target</td><td>gallons_fastsim</td></tr><tr><td>Link RMSE</td><td>0.00162</td></tr><tr><td>Link Norm RMSE</td><td>1.02617</td></tr><tr><td>Link Weighted RPD</td><td>0.84957</td></tr><tr><td>Net Error</td><td>-0.34643</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>28.87586</td></tr><tr><td>Trip RPD</td><td>0.41901</td></tr><tr><td>Trip Weighted RPD</td><td>0.41901</td></tr><tr><td>Trip RMSE</td><td>0.01425</td></tr><tr><td>Trip Norm RMSE</td><td>0.34643</td></tr><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade&speed</td></tr><tr><td>Target</td><td>gallons_fastsim</td></tr><tr><td>Link RMSE</td><td>0.00138</td></tr><tr><td>Link Norm RMSE</td><td>0.87020</td></tr><tr><td>Link Weighted RPD</td><td>0.61434</td></tr><tr><td>Net Error</td><td>-0.16459</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>22.59067</td></tr><tr><td>Trip RPD</td><td>0.17935</td></tr><tr><td>Trip Weighted RPD</td><td>0.17935</td></tr><tr><td>Trip RMSE</td><td>0.00677</td></tr><tr><td>Trip Norm RMSE</td><td>0.16459</td></tr><tr><td colspan='2' style='border-bottom: 2px solid black;text-align: center;'><b>Estimator Errors</b></td></tr><tr><td>Feature Set ID</td><td>grade&road_class&speed</td></tr><tr><td>Target</td><td>gallons_fastsim</td></tr><tr><td>Link RMSE</td><td>0.00138</td></tr><tr><td>Link Norm RMSE</td><td>0.87389</td></tr><tr><td>Link Weighted RPD</td><td>0.60147</td></tr><tr><td>Net Error</td><td>-0.14991</td></tr><tr><td>Actual Dist/Energy</td><td>18.87243</td></tr><tr><td>Predicted Dist/Energy</td><td>22.20060</td></tr><tr><td>Trip RPD</td><td>0.16206</td></tr><tr><td>Trip Weighted RPD</td><td>0.16206</td></tr><tr><td>Trip RMSE</td><td>0.00617</td></tr><tr><td>Trip Norm RMSE</td><td>0.14991</td></tr></table>"
+      ],
       "text/plain": [
-       "{'speed': {'gallons_fastsim': {'link_root_mean_squared_error': 0.0016233121197930622,\n",
-       "   'link_norm_root_mean_squared_error': 1.0261685421585147,\n",
-       "   'link_weighted_relative_percent_difference': 0.8495713791715214,\n",
-       "   'trip_relative_percent_difference': 0.4190068935567401,\n",
-       "   'trip_weighted_relative_percent_difference': 0.4190068935567401,\n",
-       "   'trip_root_mean_squared_error': 0.014248552270412058,\n",
-       "   'trip_norm_root_mean_squared_error': 0.34642885447975,\n",
-       "   'net_error': -0.34642885447975014,\n",
-       "   'actual_dist_per_energy': 18.87242682970949,\n",
-       "   'pred_dist_per_energy': 28.87585683527511}},\n",
-       " 'grade&speed': {'gallons_fastsim': {'link_root_mean_squared_error': 0.0013765769110551252,\n",
-       "   'link_norm_root_mean_squared_error': 0.8701961284972023,\n",
-       "   'link_weighted_relative_percent_difference': 0.6143420458266968,\n",
-       "   'trip_relative_percent_difference': 0.17935189304890775,\n",
-       "   'trip_weighted_relative_percent_difference': 0.17935189304890775,\n",
-       "   'trip_root_mean_squared_error': 0.006769635458198642,\n",
-       "   'trip_norm_root_mean_squared_error': 0.16459195380145325,\n",
-       "   'net_error': -0.1645919538014534,\n",
-       "   'actual_dist_per_energy': 18.87242682970949,\n",
-       "   'pred_dist_per_energy': 22.590669213190925}},\n",
-       " 'grade&road_class&speed': {'gallons_fastsim': {'link_root_mean_squared_error': 0.0013824217205645067,\n",
-       "   'link_norm_root_mean_squared_error': 0.8738908952523478,\n",
-       "   'link_weighted_relative_percent_difference': 0.6014713337638137,\n",
-       "   'trip_relative_percent_difference': 0.16206103649837114,\n",
-       "   'trip_weighted_relative_percent_difference': 0.16206103649837114,\n",
-       "   'trip_root_mean_squared_error': 0.0061659122503353245,\n",
-       "   'trip_norm_root_mean_squared_error': 0.14991347030687147,\n",
-       "   'net_error': -0.14991347030687163,\n",
-       "   'actual_dist_per_energy': 18.87242682970949,\n",
-       "   'pred_dist_per_energy': 22.20059508121158}}}"
+       "=========================================\n",
+       "Feature Set ID:       speed\n",
+       "Target:               gallons_fastsim\n",
+       "Link RMSE             0.002\n",
+       "Link Norm RMSE        1.026\n",
+       "Link Weighted RPD     0.850\n",
+       "Net Error             -0.346\n",
+       "Actual Dist/Energy    18.872\n",
+       "Predicted Dist/Energy 28.876\n",
+       "Trip RPD              0.419\n",
+       "Trip Weighted RPD     0.419\n",
+       "Trip RMSE             0.014\n",
+       "Trip Norm RMSE        0.346\n",
+       "=========================================\n",
+       "Feature Set ID:       grade&speed\n",
+       "Target:               gallons_fastsim\n",
+       "Link RMSE             0.001\n",
+       "Link Norm RMSE        0.870\n",
+       "Link Weighted RPD     0.614\n",
+       "Net Error             -0.165\n",
+       "Actual Dist/Energy    18.872\n",
+       "Predicted Dist/Energy 22.591\n",
+       "Trip RPD              0.179\n",
+       "Trip Weighted RPD     0.179\n",
+       "Trip RMSE             0.007\n",
+       "Trip Norm RMSE        0.165\n",
+       "=========================================\n",
+       "Feature Set ID:       grade&road_class&speed\n",
+       "Target:               gallons_fastsim\n",
+       "Link RMSE             0.001\n",
+       "Link Norm RMSE        0.874\n",
+       "Link Weighted RPD     0.601\n",
+       "Net Error             -0.150\n",
+       "Actual Dist/Energy    18.872\n",
+       "Predicted Dist/Energy 22.201\n",
+       "Trip RPD              0.162\n",
+       "Trip Weighted RPD     0.162\n",
+       "Trip RMSE             0.006\n",
+       "Trip Norm RMSE        0.150\n",
+       "========================================="
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test_vehicle.metadata.errors"
+    "test_vehicle.errors"
    ]
   },
   {
@@ -358,6 +371,13 @@
     "test_vehicle.to_file(\"Test_Vehicle.json\")\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
