--- a/docs/model_prediction.ipynb
+++ b/docs/model_prediction.ipynb
@@ -596,9 +596,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "routee-powertrain",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "routee-powertrain"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
