--- a/docs/model_training.ipynb
+++ b/docs/model_training.ipynb
@@ -222,12 +222,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, we can build a model configuration that we can pass to the trainer. This will also include things like the vehicle powertrain type and a model name"
+    "We also need to decide how we want to predict the energy.\n",
+    "We have two options: \"rate\" or \"raw\".\n",
+    "\"rate\" will take our energy values and divide them by the distance column to arrive at and energy rate.\n",
+    "Then, the estimator will be trained to predict the rate value (without using distance as a feature) and then the model will multiply the rate value by the incoming link distance to give a final raw energy value.\n",
+    "This can be useful in your training data is sparse as it allows the model to be flexible to distance.\n",
+    "\"raw\" will tell the estimator to predict the energy on the link directly, using distance as an explicit feature.\n",
+    "This can be more robust for situations where the energy rate on a link might vary with respect to distance but can lead to weird results if there are not a good representation of different distance values in the training dataset.\n",
+    "In our case we'll use \"rate\" since our training data is very sparse."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_method = \"rate\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we can build a model configuration that we can pass to the trainer. This will also include things like the vehicle powertrain type and a model name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +260,8 @@
     "    feature_sets=features,\n",
     "    distance=distance,\n",
     "    target=energy_target,\n",
-    "    test_size=0.2\n",
+    "    test_size=0.2,\n",
+    "    predict_method=predict_method\n",
     ")"
    ]
   },
@@ -250,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,17 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-11-07 15:06:30,350 [INFO] - filtered out 0 rows with energy rates outside of the limits of -inf and inf for energy target gallons_fastsim\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_vehicle = trainer.train(df, config)"
    ]
@@ -295,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +365,7 @@
        "===================================================="
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
