--- a/docs/model_training.ipynb
+++ b/docs/model_training.ipynb
@@ -401,11 +401,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "6919b47cc8f8d676c7fed1b967e6a734dcd85e514e7a620e6ce1fdd963adcf4d"
-  },
   "kernelspec": {
-   "display_name": "Python 3.11.9 ('routee_compt')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -419,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
