--- a/docs/model_training-ngboost.ipynb
+++ b/docs/model_training-ngboost.ipynb
@@ -610,7 +610,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "routee_compt",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -624,7 +624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
