--- a/docs/model_training-smartcore.ipynb
+++ b/docs/model_training-smartcore.ipynb
@@ -476,7 +476,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "routee_compt",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -490,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.5"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
