deploy: 56273046cd60bdbc63e39c0979c5ed62e78ac394

--- a/_sources/examples/temperature_models_example.ipynb
+++ b/_sources/examples/temperature_models_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "be5dc698",
+   "id": "7bd8688d",
    "metadata": {},
    "source": [
     "# Temperature Models Example\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e574fcff",
+   "id": "b3e74b8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ee16acf",
+   "id": "f7d9d9cf",
    "metadata": {},
    "source": [
     "To demonstrate the use of temperature models, we will load a standard Tesla Model 3 RWD model (without temperature as a feature) and two temperature models (steady-state and transient) for the same vehicle. \n",
@@ -43,22 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bf51916",
+   "id": "aa9a0f9e",
    "metadata": {},
    "outputs": [],
    "source": [
     "tesla = pt.load_model(\"2022_Tesla_Model_3_RWD\")\n",
-    "tesla_with_temp_steady = pt.load_model(\n",
-    "    \"../../../../Downloads/routee-temperature-models/2022_Tesla_Model_3_RWD_0F_110F_steady.json\"\n",
-    ")\n",
-    "tesla_with_temp_transient = pt.load_model(\n",
-    "    \"../../../../Downloads/routee-temperature-models/2022_Tesla_Model_3_RWD_0F_110F_transient.json\"\n",
-    ")\n"
+    "tesla_with_temp_steady = pt.load_model(\"2022_Tesla_Model_3_RWD_0F_110F_steady\")\n",
+    "tesla_with_temp_transient = pt.load_model(\"2022_Tesla_Model_3_RWD_0F_110F_transient\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5a13bcf",
+   "id": "3a55197c",
    "metadata": {},
    "source": [
     "Load a sample route and prepare it for prediction."
@@ -67,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c619682",
+   "id": "ed25c650",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2e92a5f",
+   "id": "e7a603f6",
    "metadata": {},
    "source": [
     "Set the ambient temperature for the route."
@@ -90,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61155a0a",
+   "id": "79fd9f15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76641617",
+   "id": "07e300a8",
    "metadata": {},
    "source": [
     "For the 32°F route, we will use the transient model for the first 5 minutes and the steady-state model for the remainder of the trip."
@@ -113,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c94b0cfd",
+   "id": "f80d03de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b799d078",
+   "id": "833b0227",
    "metadata": {},
    "source": [
     "Predict energy consumption using the different models and ambient temperatures."
@@ -136,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39a39003",
+   "id": "cc27799c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeaf1540",
+   "id": "20784b0c",
    "metadata": {},
    "source": [
     "Now, we can compare the energy consumption results."
@@ -168,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f93c7ef1",
+   "id": "8158adf0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a4bb914",
+   "id": "29ceeab2",
    "metadata": {},
    "source": [
     "Notice how the energy consumption for the 32°F route is higher than the other two scenarios, reflecting the increased energy demand in colder temperatures.\n",
