add to_lookup_table method

--- a/docs/examples/temperature_models_example.ipynb
+++ b/docs/examples/temperature_models_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33e25535",
+   "id": "c89bf93b",
    "metadata": {},
    "source": [
     "# Temperature Models Example\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03caaecf",
+   "id": "1d7c3fbc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0ea30e1",
+   "id": "7b5f2de6",
    "metadata": {},
    "source": [
     "To demonstrate the use of temperature models, we will load a standard Tesla Model 3 RWD model (without temperature as a feature) and two temperature models (steady-state and transient) for the same vehicle. \n",
@@ -43,22 +43,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae00804b",
+   "id": "ea40b8a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "tesla = pt.load_model(\"2022_Tesla_Model_3_RWD\")\n",
-    "tesla_with_temp_steady = pt.load_model(\n",
-    "    \"../../../../Downloads/routee-temperature-models/2022_Tesla_Model_3_RWD_0F_110F_steady.json\"\n",
-    ")\n",
-    "tesla_with_temp_transient = pt.load_model(\n",
-    "    \"../../../../Downloads/routee-temperature-models/2022_Tesla_Model_3_RWD_0F_110F_transient.json\"\n",
-    ")\n"
+    "tesla_with_temp_steady = pt.load_model(\"2022_Tesla_Model_3_RWD_0F_110F_steady\")\n",
+    "tesla_with_temp_transient = pt.load_model(\"2022_Tesla_Model_3_RWD_0F_110F_transient\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8d072352",
+   "id": "07fc5db1",
    "metadata": {},
    "source": [
     "Load a sample route and prepare it for prediction."
@@ -67,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfb49c85",
+   "id": "d5199979",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab7b1eb3",
+   "id": "469983f4",
    "metadata": {},
    "source": [
     "Set the ambient temperature for the route."
@@ -90,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a9ced3b",
+   "id": "d5394283",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8db09cc4",
+   "id": "978dd771",
    "metadata": {},
    "source": [
     "For the 32°F route, we will use the transient model for the first 5 minutes and the steady-state model for the remainder of the trip."
@@ -113,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f6c09c5",
+   "id": "d4a91896",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "deed3b91",
+   "id": "46311700",
    "metadata": {},
    "source": [
     "Predict energy consumption using the different models and ambient temperatures."
@@ -136,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1991c4c",
+   "id": "c59af4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0db6c35",
+   "id": "66d05fbf",
    "metadata": {},
    "source": [
     "Now, we can compare the energy consumption results."
@@ -168,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57445395",
+   "id": "c14a3be8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e00cc0b",
+   "id": "ba6389a8",
    "metadata": {},
    "source": [
     "Notice how the energy consumption for the 32°F route is higher than the other two scenarios, reflecting the increased energy demand in colder temperatures.\n",
