deploy: 6288b82ab1c2af8f220b8f3d12d281beda01a44b

--- a/_sources/examples/temperature_models_example.ipynb
+++ b/_sources/examples/temperature_models_example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "25afda7a",
+   "id": "046e897e",
    "metadata": {},
    "source": [
     "# Temperature Models Example\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b723ce4",
+   "id": "1f262506",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3495f33a",
+   "id": "de77ff0c",
    "metadata": {},
    "source": [
     "To demonstrate the use of temperature models, we will load a standard Tesla Model 3 RWD model (without temperature as a feature) and two temperature models (steady-state and transient) for the same vehicle. \n",
@@ -34,7 +34,7 @@
     "\n",
     "It's important to understand the distinction between steady-state and transient temperature models:\n",
     "- **Steady-State Temperature Models**: These models assume that the vehicle's thermal conditions have stabilized to a constant state. \n",
-    "    They are typically used for longer trips where the vehicle has had sufficient time to reach thermal equilibrium with its environment. \n",
+    "    They are typically used for longer trips where the vehicle has had sufficient time for the control systems to have stabilized the thermal environment. \n",
     "    In this example, we will use the steady-state model for the portion of the trip after the first 5 minutes at 32°F.\n",
     "- **Transient Temperature Models**: These models account for the period when the vehicle is still adjusting to the ambient temperature.\n",
     "    For example, when a vehicle starts a trip in cold weather and has been sitting outside, it takes some time for the battery and cabin to warm up."
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae1b7771",
+   "id": "03f56a39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b86251dc",
+   "id": "f60a2689",
    "metadata": {},
    "source": [
     "Load a sample route and prepare it for prediction."
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb49fc2b",
+   "id": "36919980",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e1cfe48",
+   "id": "51802c00",
    "metadata": {},
    "source": [
     "Set the ambient temperature for the route."
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c8ecd53",
+   "id": "e59ea692",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4da26c6",
+   "id": "1ad3f69f",
    "metadata": {},
    "source": [
     "For the 32°F route, we will use the transient model for the first 5 minutes and the steady-state model for the remainder of the trip."
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e974c11b",
+   "id": "3d4c2c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "211ef351",
+   "id": "4a793d5d",
    "metadata": {},
    "source": [
     "Predict energy consumption using the different models and ambient temperatures."
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f73400cf",
+   "id": "18ad9ec0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bcb2b857",
+   "id": "2c26d68a",
    "metadata": {},
    "source": [
     "Now, we can compare the energy consumption results."
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e8b9d6b",
+   "id": "3c2893a9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecfb2708",
+   "id": "1388f2cc",
    "metadata": {},
    "source": [
     "Notice how the energy consumption for the 32°F route is higher than the other two scenarios, reflecting the increased energy demand in colder temperatures.\n",
@@ -202,6 +202,102 @@
     "Something else to note is that the model that doesn't consider temperature explicitly includes a \"real world correction factor\" to account for things like temperature _on average_.\n",
     "This explains why the energy consumption for the 72°F route is slightly lower than the other two scenarios since the model without temperature adjustment is effectively averaging out the impact of temperature. \n",
     "The 72°F condition would be considered the \"ideal\" case since the vehicle does not have to expand any extra effort to maintain the cabin temperature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2789779a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43c6d828",
+   "metadata": {},
+   "source": [
+    "## Multi-Vehicle Comparison\n",
+    "\n",
+    "Now let's compare the Tesla Model 3 with other electric vehicles to see how different EVs perform under various temperature conditions.\n",
+    "We'll load the Nissan Leaf and Chevrolet Bolt models and compare their energy consumption across different temperatures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da899b29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Load Nissan Leaf models\n",
+    "nissan_leaf_steady = pt.load_model(\"2016_Nissan_Leaf_30_kWh_0F_110F_steady\")\n",
+    "nissan_leaf_transient = pt.load_model(\"2016_Nissan_Leaf_30_kWh_0F_110F_transient\")\n",
+    "\n",
+    "# Load Chevrolet Bolt models\n",
+    "chevy_bolt_steady = pt.load_model(\"2020_Chevrolet_Bolt_EV_0F_110F_steady\")\n",
+    "chevy_bolt_transient = pt.load_model(\"2020_Chevrolet_Bolt_EV_0F_110F_transient\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4485745d",
+   "metadata": {},
+   "source": [
+    "### Temperature Sensitivity Comparison\n",
+    "Let's compare how each vehicle's energy consumption changes across a range of temperatures (0°F, 15°F, 32°F, 50°F, 72°F, 90°F, 110°F).\n",
+    "We'll use steady-state models for this comparison."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b106460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Predict energy for all vehicles at different temperatures\n",
+    "temperatures = [0, 15, 32, 50, 72, 90, 110]\n",
+    "vehicles_data = {\n",
+    "    \"Tesla Model 3 RWD\": tesla_with_temp_steady,\n",
+    "    \"Nissan Leaf 30 kWh\": nissan_leaf_steady,\n",
+    "    \"Chevrolet Bolt EV\": chevy_bolt_steady,\n",
+    "}\n",
+    "\n",
+    "total_energy_by_temp = {vehicle: [] for vehicle in vehicles_data.keys()}\n",
+    "\n",
+    "for temp in temperatures:\n",
+    "    route_temp = sample_route.copy()\n",
+    "    route_temp[\"ambient_temp_f\"] = temp\n",
+    "\n",
+    "    for vehicle_name, model in vehicles_data.items():\n",
+    "        energy_pred = model.predict(\n",
+    "            route_temp, feature_columns=[\"speed_mph\", \"grade_percent\", \"ambient_temp_f\"]\n",
+    "        )\n",
+    "        total_energy_by_temp[vehicle_name].append(energy_pred[\"kwh\"].sum())\n",
+    "\n",
+    "# Create temperature sensitivity comparison plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "for vehicle_name, energies in total_energy_by_temp.items():\n",
+    "    plt.plot(\n",
+    "        temperatures,\n",
+    "        energies,\n",
+    "        marker=\"o\",\n",
+    "        linewidth=2,\n",
+    "        markersize=8,\n",
+    "        label=vehicle_name,\n",
+    "    )\n",
+    "\n",
+    "plt.xlabel(\"Ambient Temperature (°F)\")\n",
+    "plt.ylabel(\"Total Energy Consumption (kWh)\")\n",
+    "plt.title(\"Temperature Sensitivity Comparison Across Vehicles\")\n",
+    "plt.legend()\n",
+    "plt.grid(True, alpha=0.3)\n"
    ]
   }
  ],
